fix mobile footer height and spacing

--- a/assets/main.css
+++ b/assets/main.css
@@ -997,6 +997,11 @@ footer article {
 	grid-template-columns: 20px 1fr 20px 1fr 20px;
     justify-items: center;
     grid-column-gap: 0;
+    margin-bottom: 20px;
+}
+
+footer h3 {
+	margin-bottom: 30px;
 }
 
 .peek {
@@ -1018,12 +1023,13 @@ footer .second-sixth, footer .fourth-sixth, footer .sixth-sixth {
 }
 
 footer figure {
-	width: 124px !important;
-	height: 124px !important;
+	width: 116px !important;
+	height: 116px !important;
+	margin-bottom: 40px;
 }
 
 footer .sub-proj-img {
-	height: 124px;
+	height: 116px;
 }
 
 .next-prev h3 {
